# GBEmulator

./: .gitignore  CMakeLists.txt  CPUTests.py  GBEmulator.sln  OPCODE_TODO.txt  README.md  ReverseOpcodeMapGenerator.py  out.txt
GBEmulator/: CMakeLists.txt  CPU.cpp  CPU.h  CPUCore.cpp  CPUCore.h  GBEmulator.vcxproj  GBEmulator.vcxproj.filters  Gameboy.cpp  Gameboy.h  OpcodeResultContext.cpp  OpcodeResultContext.h  Opcodes.cpp  Opcodes.h  Registers.h  ReverseOpcodeMap.h  gb_cpucore_opcodes.cpp  gb_ram.cpp  gb_ram.h  gb_regs.cpp  gb_regs.h  gb_rom.cpp  gb_rom.h  gb_typeutils.h  primary_loop.cpp
GBEmulator/cpu/: CPUCore.cpp  CPUCore.h
GBEmulator/cpu/opcodes/: OpcodeResultContext.cpp  OpcodeResultContext.h  gb_cpucore_cb_opcodes.cpp  gb_cpucore_opcode_utils.cpp  gb_cpucore_opcode_utils.h  gb_cpucore_opcodes.cpp
GBEmulator/display/: gb_ascii_screen.cpp  gb_ascii_screen.h  gb_screen_api.cpp  gb_screen_api.h  gb_screen_displaygriditem.h  gb_screen_displaytile.h  gb_screen_layer.cpp  gb_screen_layer.h  gb_screen_layereventmanager.h  gb_screen_layerrenderer.cpp  gb_screen_layerrenderer.h  gb_sdl_screen.cpp  gb_sdl_screen.h
GBEmulator/display/displaycore/: displaycore_layout.h  displaycore_tile.h  displaycore_tiledataranges.h
GBEmulator/display/sdl/: sdldisplay_screen.h
GBEmulator/ram/: gb_ram.cpp  gb_ram.h
GBEmulator/registers/: gb_regs.cpp  gb_regs.h
GBEmulator/romloader/: gb_rom.cpp  gb_rom.h
GBEmulator/utils/: addressrange.h  gb_typeutils.h
GBEmulator_Test/: CPUTest.hpp  CpuTestGen.py  CpuTestTemplate.cpp  GBEmulator_Test.cpp  GBEmulator_Test.gen.cpp  GBEmulator_Test.vcxproj  GBEmulator_Test.vcxproj.filters  JValidate.py  OpcodesTest.hpp  ReadMe.txt  gbtestgen.json  stdafx.cpp
GBEmulator_Test/ASMTest/: jumpTest.asm  jumpTest.json  sdlBaseline.asm  simpleLoadTest.asm
thehandler/: WHOAMI.md  basetest.json  verify.cpp
